# claude-history

./: CHANGELOG.md  Cargo.toml  README.md  claude-history.bat
.claude/state/handoff/: console_4498d236-02ba-476a-a62e-ee02a0d4668c_20260413T171443_handoff.json
.claude/state/policy_gate/console_4498d236-02ba-476a-a62e-ee02a0d4668c/: analysis_cache.json
.claude/state/sessions/addc61c9-8a77-4d95-8b51-4da91ea04724/: intent_state.json
.claude/state/sessions/cfe6c907-290f-4cb5-85af-9e4ebe880549/: intent_state.json
src/: cli.rs  database.rs  ingest.rs  lib.rs  main.rs  mcp.rs
tests/: database_tests.rs
